@@ -1,3 +1,8 @@
+2003-03-02  Nick Clifton  <nickc@redhat.com>
+
+	* armos.c (SWIWrite0): Catch big-endian bug when printing
+	characters.
+
 2003-02-27  Andrew Cagney  <cagney@redhat.com>
 
 	* wrapper.c (sim_create_inferior, sim_open): Rename _bfd to bfd.
